--- a/pages/Pages/projects/Projects.razor
+++ b/pages/Pages/projects/Projects.razor
@@ -26,6 +26,6 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        _projects=await Http.GetFromJsonAsync<List<Project>>("/dataJSON/projects.json");
+        _projects=await Http.GetFromJsonAsync<List<Project>>("/pages/dataJSON/projects.json");
     }
 }
