--- a/pages/Pages/Home.razor
+++ b/pages/Pages/Home.razor
@@ -1,10 +1,11 @@
 ﻿@page "/"
 
 <div id="home">
-
+    
+    @*
     <div id="introduction">
         <h2>Aspiring Software Engineer and Mathematician</h2>
-    </div>
+    </div> *@
 
     <!---Flexcontainer to 1row-3col-->
     <!--flexitem to 1row-col-col-->
