--- a/pages/Pages/projects/ProjectCard.razor
+++ b/pages/Pages/projects/ProjectCard.razor
@@ -5,7 +5,11 @@
                 <p class="header"> @Project.Name</p>
             </div>
 
-            <img src="@Project.Image" class="auhtorPhoto" alt="@Project.Name" />
+            <img src="@baseUrl+@Project.Image" class="auhtorPhoto" alt="@Project.Name" />
+        </div>
+
+        <div class="button-center">
+            <a href="@Project.GitLink"><button type="button" class="btn btn-primary">View in GitHub</button> </a>
         </div>
 
         <div class="description">
@@ -24,6 +28,8 @@
 
 @code {
     [Parameter][EditorRequired] public Project Project { get; set; } = default;
+
+    string baseUrl = "/pages";
 
 }
 
