--- a/pages/Shared/NavMenu.razor
+++ b/pages/Shared/NavMenu.razor
@@ -24,7 +24,7 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="skills">
-                <span class="bi bi-award" aria-hidden="true"></span> Skills
+                <i class="bi bi-award"></i> Skills
             </NavLink>
         </div>
 
