--- a/pages/wwwroot/css/app.css
+++ b/pages/wwwroot/css/app.css
@@ -225,7 +225,7 @@ a {
     /*Skills*/
     .row-infinity-col6-disconnected {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
         margin: 10px 0;
         padding: 10px 0;
     }
