--- a/pages/wwwroot/css/app.css
+++ b/pages/wwwroot/css/app.css
@@ -171,7 +171,7 @@ a {
     /*Skills*/
     .row-infinity-col6-disconnected {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
         margin: 10px 0;
         padding: 10px 0;
     }
@@ -188,7 +188,7 @@ a {
     }
     .row-infinity-col6-disconnected {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
         margin: 10px 0;
         padding: 10px 0;
     }
