--- a/pages/Shared/NavMenu.razor
+++ b/pages/Shared/NavMenu.razor
@@ -22,12 +22,12 @@
             </NavLink>
         </div>
 
-        @* 
+        
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="skills">
                 <i class="bi bi-award"></i> Skills
             </NavLink>
-        </div>*@
+        </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="https://www.linkedin.com/in/umidmuzrapov/">
