--- a/pages/Pages/projects/ProjectCard.razor
+++ b/pages/Pages/projects/ProjectCard.razor
@@ -10,8 +10,7 @@
         </div>
 
         <div class="button-center">
-       
-            <a href="@Project.GitLink"><button type="button" class="btn btn-primary">View in GitHub</button> </a>
+            <a href="@Project.GitLink" target="_blank"><button type="button" class="btn btn-primary">View in GitHub</button> </a>
         </div>
         
 
