--- a/pages/Shared/NavMenu.razor
+++ b/pages/Shared/NavMenu.razor
@@ -30,19 +30,19 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="https://www.linkedin.com/in/umidmuzrapov/">
+            <NavLink class="nav-link" href="https://www.linkedin.com/in/umidmuzrapov/" target="_blank">
                 <i class="bi bi-linkedin"></i> LinkedIn
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="https://www.hackerrank.com/dashboard">
+            <NavLink class="nav-link" href="https://www.hackerrank.com/dashboard" target="_blank">
                 <i class="bi bi-code"></i>HackerRank
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="https://github.com/UmidMuzrapov">
+            <NavLink class="nav-link" href="https://github.com/UmidMuzrapov" target="_blank">
                 <i class="bi bi-github"></i>GitHub
             </NavLink>
         </div>
