center the load button

--- a/pages/Pages/projects/Projects.razor
+++ b/pages/Pages/projects/Projects.razor
@@ -40,7 +40,7 @@ else
 
     @if (elementMax<_currentProjects.Count)
     {
-        <div class="button-margin-bottom">
+        <div class="button-margin-bottom center">
             <span onclick="@LoadMore"><button type="button" class="btn btn-primary">Load more</button> </span>
         </div>
     }
