--- a/pages/Shared/NavMenu.razor
+++ b/pages/Shared/NavMenu.razor
@@ -22,10 +22,16 @@
             </NavLink>
         </div>
 
-        
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="skills">
                 <i class="bi bi-award"></i> Skills
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="papers">
+                <i class="oi oi-paperclip"></i> Papers
             </NavLink>
         </div>
 
