--- a/pages/Pages/papers/Papers.razor
+++ b/pages/Pages/papers/Papers.razor
@@ -30,8 +30,7 @@
 
 
 </div>
-
-
+ <MudButton StartIcon="@Icons.Material.Filled.AlarmAdd" IconColor="Color.Warning">Add alarm</MudButton>
 @code
 {
     private List<Paper>? _papers;
