--- a/pages/Pages/projects/Projects.razor
+++ b/pages/Pages/projects/Projects.razor
@@ -2,6 +2,7 @@
 @using pages
 @page "/projects"
 
+<div id="projects">
 <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
     <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" @onclick="@ShowJava">
     <label class="btn btn-outline-primary" for="btnradio1">Java</label>
@@ -45,7 +46,7 @@ else
         </div>
     }
 }
-
+</div>
 @code
 {
     private List<Project>? _projects;
