--- a/pages/wwwroot/css/app.css
+++ b/pages/wwwroot/css/app.css
@@ -229,8 +229,10 @@ a {
 }
 
 /* Home*/
+
 #home{
     margin:10px;
+    max-width: 1000px;
 }
 #home a {
     color: white;
@@ -249,6 +251,10 @@ a {
 }
 
 /*Projects*/
+#projects{
+    max-width: 1000px;
+}
+
 #project-frame .frame{
     border-radius: 10px;
     margin: 5px;
@@ -290,6 +296,10 @@ a {
 }
 
 /*Skills*/
+#skills{
+    max-width: 1000px;
+}
+
 #skill-card img {
     width: 100%;
     height: 20%;
