--- a/pages/Pages/papers/Papers.razor
+++ b/pages/Pages/papers/Papers.razor
@@ -39,7 +39,8 @@
 
     protected override async Task OnInitializedAsync()
     {
-        _papers= await Http.GetFromJsonAsync<List<Paper>>("/pages/dataJSON/papers.json");
+        var url = Http.BaseAddress + "/dataJSON/papers.json";
+        _papers= await Http.GetFromJsonAsync<List<Paper>>(url);
     }
 
     private int Index = -1; //default value cannot be 0 -> first selectedindex is 0.
