--- a/pages/Pages/projects/Projects.razor
+++ b/pages/Pages/projects/Projects.razor
@@ -61,7 +61,8 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        _projects=await Http.GetFromJsonAsync<List<Project>>("/pages/dataJSON/projects.json");
+        string api = Http.BaseAddress + "/dataJSON/projects.json";
+        _projects = await Http.GetFromJsonAsync<List<Project>>(api);
         _currentProjects=_projects;
         CountProjects();
     }
