Revert "Change the base address"
This reverts commit 57efaf0115280efae2ac88d59d18f410aa024f9d.

--- a/pages/Pages/Home.razor
+++ b/pages/Pages/Home.razor
@@ -81,8 +81,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        var url = Http.BaseAddress + "/dataJSON/universityCourses.json";
-        _universityCourses= await Http.GetFromJsonAsync<List<Course>>(url);
+        _universityCourses= await Http.GetFromJsonAsync<List<Course>>("/pages/dataJSON/universityCourses.json");
     }
 
     private void LoadMore()
