--- a/pages/Pages/skills/Skills.razor
+++ b/pages/Pages/skills/Skills.razor
@@ -24,7 +24,6 @@
 
     protected override async Task OnInitializedAsync()
     {
-        var url = Http.BaseAddress + "/dataJSON/skills.json";
-        _skills = await Http.GetFromJsonAsync<List<Skill>>(url);
+        _skills=await Http.GetFromJsonAsync<List<Skill>>("/pages/dataJSON/skills.json");
     }
 }
