Change college year

--- a/pages/Pages/Home.razor
+++ b/pages/Pages/Home.razor
@@ -14,7 +14,7 @@
     <div>
         <h2>Welcome</h2>
 
-        <p>I am a sophomore at the University of Arizona, where I study computer science and mathematics. During my undergraduate years, I want to explore the tech field as well to find my true passion. After graduation, I am planning to work in the industry before I continue my education in graduate school.</p>
+        <p>I am a junior at the University of Arizona, where I study computer science and mathematics. During my undergraduate years, I want to explore the tech field as well to find my true passion. After graduation, I am planning to work in the industry before I continue my education in graduate school.</p>
         <p>Currently my interests are web-development, software architecture and database design.</p>
     </div>
 
