--- a/pages/Shared/NavMenu.razor
+++ b/pages/Shared/NavMenu.razor
@@ -28,12 +28,12 @@
                 <i class="bi bi-award"></i> Skills
             </NavLink>
         </div>
-
+@*
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="papers">
                 <i class="oi oi-paperclip"></i> Papers
             </NavLink>
-        </div>
+        </div>*@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="https://www.linkedin.com/in/umidmuzrapov/" target="_blank">
