update card header

--- a/pages/Pages/projects/ProjectCard.razor
+++ b/pages/Pages/projects/ProjectCard.razor
@@ -3,7 +3,7 @@
     <div class="frame">
         <div>
             <div class="frameline">
-                <p class="header"> @Project.Name</p>
+                <p class="custom-header"> @Project.Name</p>
             </div>
 
             <img src="@Project.Image" alt="@Project.Name" />
