--- a/pages/Pages/projects/ProjectCard.razor
+++ b/pages/Pages/projects/ProjectCard.razor
@@ -3,14 +3,14 @@
     <div class="frame">
         <div>
             <div class="frameline">
-                <p class="custom-header"> @Project.Name</p>
+                <p class="header"> @Project.Name</p>
             </div>
 
             <img src="@Project.Image" alt="@Project.Name" />
         </div>
 
         <div class="button-center">
-            <a href="@Project.GitLink" target="_blank"><RadzenButton ButtonStyle="ButtonStyle.Info">View in GitHub</RadzenButton> </a>
+            <a href="@Project.GitLink" target="_blank"><button type="button" class="btn btn-primary">View in GitHub</button> </a>
         </div>
         
 
