--- a/pages/Pages/Home.razor
+++ b/pages/Pages/Home.razor
@@ -14,8 +14,18 @@
     <div>
         <h2>Welcome</h2>
 
-        <p>I am a junior at the University of Arizona, where I study computer science and mathematics. During my undergraduate years, I want to explore the tech field as well to find my true passion. After graduation, I am planning to work in the industry before I continue my education in graduate school.</p>
-        <p>Currently my interests are web-development, software architecture and database design.</p>
+        <p>
+            I am passionate about software development, architecting scalable solutions, and writing concise code. Being able to develop something useful and seeing it works make me happy.
+
+            Through college and work experience, I developed many projects using diverse technologies like C#, Haskell, Prolog, Java, JavaScript, AWS, LISP, Docker, GitHub, and relational databases. Some of the fields I have been fortunate to work in include:
+        </p>
+
+        <p> Internet of Things, with the focus on LoRaWAN devices</p>
+        <p>Authentication and authorization in systems with millions of users</p>
+        <p>Web development</p>
+        <p> Tailored graph algorithms and data dtructures</p>
+        <p>Designing scalable, safe cloud solutions</p>
+ 
     </div>
 
     <div>
