--- a/pages/Pages/Home.razor
+++ b/pages/Pages/Home.razor
@@ -20,11 +20,14 @@
             Through college and work experience, I developed many projects using diverse technologies like C#, Haskell, Prolog, Java, JavaScript, AWS, LISP, Docker, GitHub, and relational databases. Some of the fields I have been fortunate to work in include:
         </p>
 
-        <p> Internet of Things, with the focus on LoRaWAN devices</p>
-        <p>Authentication and authorization in systems with millions of users</p>
-        <p>Web development</p>
-        <p> Tailored graph algorithms and data dtructures</p>
-        <p>Designing scalable, safe cloud solutions</p>
+        <ul>
+            <li> Internet of Things, with the focus on LoRaWAN devices</li>
+            <li>Authentication and authorization in systems with millions of users</li>
+            <li>Web development</li>
+            <li> Tailored graph algorithms and data dtructures</li>
+            <li>Designing scalable, safe cloud solutions</li>
+        </ul>
+       
  
     </div>
 
