--- a/pages/Pages/Home.razor
+++ b/pages/Pages/Home.razor
@@ -15,9 +15,9 @@
         <h2>Welcome</h2>
 
         <p>
-            I am passionate about software development, architecting scalable solutions, and writing concise code. Being able to develop something useful and seeing it works make me happy. 
+            I am passionate about software development, architecting scalable solutions, and writing concise code. Being able to develop something useful and seeing it work makes me happy. 
             Through college and work experience, I developed many projects using diverse technologies like C#, Haskell, Prolog, Java, JavaScript, AWS, LISP, Docker, GitHub, and relational databases. Some of the fields I have been fortunate to work in include:
-            internet of things, with the focus on LoRaWAN devices, authentication and authorization in systems with millions of users, web development, tailored graph algorithms and data dtructures, designing scalable, safe cloud solutions.
+            internet of things, with the focus on LoRaWAN devices; authentication and authorization in systems with millions of users; web development; tailored graph algorithms and data structures; designing horizontally scalable, robust cloud solutions.
         </p>
  
     </div>
