--- a/pages/Pages/Home.razor
+++ b/pages/Pages/Home.razor
@@ -15,9 +15,7 @@
         <h2>Welcome</h2>
 
         <p>
-            I am passionate about software development, architecting scalable solutions, and writing concise code. Being able to develop something useful and seeing it work makes me happy. 
-            Through college and work experience, I developed many projects using diverse technologies like C#, Haskell, Prolog, Java, JavaScript, AWS, LISP, Docker, GitHub, and relational databases. Some of the fields I have been fortunate to work in include:
-            internet of things, with the focus on LoRaWAN devices; authentication and authorization in systems with millions of users; web development; tailored graph algorithms and data structures; designing horizontally scalable, robust cloud solutions.
+            I am passionate about software development, architecting scalable solutions, and writing concise code. Developing software that helps people and seeing it work makes me happy. Through college and work experience, I developed many software systems using diverse technologies like C#, Haskell, Prolog, Java, JavaScript, AWS, LISP, Docker, GitHub, and relational databases. The fields I have been fortunate to work in include the Internet of Things, with emphasis on LoRaWAN devices; authentication and authorization in systems with millions of users; web development; tailored graph algorithms and data structures; designing horizontally scalable, robust cloud solutions.
         </p>
  
     </div>
