--- a/pages/wwwroot/css/app.css
+++ b/pages/wwwroot/css/app.css
@@ -189,7 +189,14 @@ a {
 
 /*Tablet*/
 @media only screen and (min-width: 701px) and (max-width: 1000px){
+    .row-infinity-col3-disconnected {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin: 10px;
+        padding: 10px 0;
+    }
 
+    /*Skills*/
     .row-infinity-col6-disconnected {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -236,7 +243,6 @@ a {
 }
 
 /* Home*/
-
 #home{
     margin:10px;
     max-width: 1000px;
