--- a/pages/Pages/projects/ProjectCard.razor
+++ b/pages/Pages/projects/ProjectCard.razor
@@ -10,7 +10,14 @@
         </div>
 
         <div class="button-center">
-            <a href="@Project.GitLink" target="_blank"><button type="button" class="btn btn-primary">View in GitHub</button> </a>
+
+            <a href="@Project.GitLink"><button type="button" class="btn btn-outline-secondary button-padding">View in GitHub</button> </a>
+
+            @if (Project.LiveTest)
+            {
+                <a href="@Project.LiveTestLink"><button type="button" class="btn btn-outline-success button-padding">Live</button> </a>
+            }
+
         </div>
         
 
