--- a/pages/Pages/projects/ProjectCard.razor
+++ b/pages/Pages/projects/ProjectCard.razor
@@ -11,11 +11,12 @@
 
         <div class="button-center">
 
-            <a href="@Project.GitLink"><button type="button" class="btn btn-outline-secondary button-padding">View in GitHub</button> </a>
+            <a href="@Project.GitLink"><button type="button" class="btn btn-primary button-padding">GitHub</button></a>
+            
 
             @if (Project.LiveTest)
             {
-                <a href="@Project.LiveTestLink"><button type="button" class="btn btn-outline-success button-padding">Live</button> </a>
+                <a href="@Project.LiveTestLink"><button type="button" class="btn button-success button-padding">Live</button> </a>
             }
 
         </div>
