--- a/pages/Shared/NavMenu.razor
+++ b/pages/Shared/NavMenu.razor
@@ -41,11 +41,11 @@
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
+@*        <div class="nav-item px-3">
             <NavLink class="nav-link" href="https://www.hackerrank.com/dashboard" target="_blank">
                 <i class="bi bi-code"></i>HackerRank
             </NavLink>
-        </div>
+        </div>*@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="https://github.com/UmidMuzrapov" target="_blank">
