--- a/pages/wwwroot/css/app.css
+++ b/pages/wwwroot/css/app.css
@@ -280,6 +280,7 @@ a {
     background: white;
     background-color: #E8E8E8;
     height: 95%;
+    max-height: 200px;
     overflow: auto;
     -ms-overflow-style: none; /* Internet Explorer 10+ */
     scrollbar-width: none; /* Firefox */
